added some additional notes after reinstalling home cluster and testing again. TLS differences required some additional configuration.

--- a/onload-kmm-dockerfile.cm.yaml
+++ b/onload-kmm-dockerfile.cm.yaml
@@ -60,5 +60,5 @@ data:
 
     # Preserve the directory structure KMM expects
     COPY --from=builder /lib/modules/${KERNEL_FULL_VERSION} /opt/lib/modules/${KERNEL_FULL_VERSION}
-    RUN ls -la /opt/lib/modules/${KERNEL_FULL_VERSION}
+    RUN ls -laR /opt/lib/modules/${KERNEL_FULL_VERSION}
     RUN sleep 10
