--- a/onload-kmm-dockerfile.cm.yaml
+++ b/onload-kmm-dockerfile.cm.yaml
@@ -13,10 +13,10 @@ data:
     ARG KERNEL_FULL_VERSION
     RUN echo "KERNEL_FULL_VERSION=${KERNEL_FULL_VERSION}"
 
-    COPY --from=srpm /root/*.pem /etc/pki/ca-trust/source/anchors/
-    RUN update-ca-trust
+    COPY --from=srpm /root/*.pem /etc/pki/tls/certs/mitm.pem
+    ENV SSL_CERT_FILE=/etc/pki/tls/certs/mitm.pem
 
-    RUN dnf install -y -q \
+    RUN dnf install -y \
           make \
           gcc \
           kernel-devel-${KERNEL_FULL_VERSION} \
@@ -34,7 +34,7 @@ data:
           kmod \
           unzip \
           rpm-build \
-        && dnf clean all -q
+        && dnf clean all
 
     # Bring in SRPM from stage 0
     COPY --from=srpm /root/*.src.rpm /root/
