refined and updated, moved signing to KMM process, used internal build process to remove external route dependencies, tighetened up the KMM build dockerfile

--- a/Dockerfile.onload-srpm
+++ b/Dockerfile.onload-srpm
@@ -1,7 +1,7 @@
-FROM registry.redhat.io/ubi9/ubi:latest
+FROM registry.redhat.io/ubi9/ubi-minimal:latest
 
 # Install the minimum tools we need
-RUN dnf install -y unzip && dnf clean all
+RUN microdnf install -y unzip && microdnf clean all
 
 # Copy in your SRPM zip
 COPY *-openonload-srpm-release-package.zip /root/openonload-srpm-release-package.zip
